# raytracer-hs

./: .gitignore  LICENSE  README.md  Vec3.hs  main.hs  raytracer-hs.cabal
src/: Camera.hs  IO.hs  Main.hs  Material.hs  Model.hs  Ray.hs  Render.hs  Renderable.hs  Util.hs  Vec3.hs
test/: test.hs
