name:                raytracer-hs
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
cabal-version:       >=1.10
build-type:          Simple
extra-source-files:  README.md

executable raytracer-hs
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base < 5

Test-Suite test
  main-is:             test.hs
  hs-source-dirs:      test, src
  type:                exitcode-stdio-1.0
  build-depends:       base,
                       QuickCheck,
                       tasty,
                       tasty-hunit,
                       tasty-quickcheck
